# olmix

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
configs/: README.md
configs/examples/: mixture_olmo2_30m.yaml  test_olmo2_30m.yaml
configs/experiments/: README.md
configs/experiments/data_proportions/: mix_baseline.yaml  mix_heavy_code.yaml  mix_heavy_science.yaml  mix_heavy_wiki.yaml
configs/experiments/quality_thresholds/heavy_adult/: top10pct.yaml  top30pct.yaml  top50pct.yaml  top70pct.yaml
configs/experiments/quality_thresholds/heavy_code/: top10pct.yaml  top30pct.yaml  top50pct.yaml  top70pct.yaml
configs/experiments/quality_thresholds/heavy_science/: top10pct.yaml  top30pct.yaml  top50pct.yaml  top70pct.yaml
configs/experiments/quality_thresholds/heavy_wiki/: top10pct.yaml  top30pct.yaml  top50pct.yaml  top70pct.yaml
configs/experiments/quality_upsampling/: README.md  batch_run.sh
configs/experiments/quality_upsampling/heavy_adult/: aggressive.yaml  gradual.yaml
configs/experiments/quality_upsampling/heavy_code/: aggressive.yaml  gradual.yaml
configs/experiments/quality_upsampling/heavy_science/: aggressive.yaml  gradual.yaml
configs/experiments/quality_upsampling/heavy_wiki/: aggressive.yaml  gradual.yaml
configs/experiments/training_duration/: duration_0.5x.yaml  duration_2.5x.yaml  duration_5.0x.yaml
configs/fits/: dclm_baseline.yaml  dclm_per_family.yaml  full_recomputation_c3_seed_0.yaml  mixture_reuse_update_5_seed_0.yaml
configs/generations/: example.yaml
configs/mixture_reuse_case_study/: README.md
configs/mixture_reuse_case_study/fit/: 0_dclm.yaml
configs/mixture_reuse_case_study/generate/: 0_dclm.yaml  5_partition_pdfs.yaml
configs/test/: verify_tokens_1400m.yaml  verify_tokens_140m.yaml  verify_tokens_700m.yaml
docs/: DECISIONS.md
olmix/: __init__.py  aliases.py  cli.py  launch_utils.py  law.py  synthesize_mixture.py  utils.py
olmix/fit/: __init__.py  cli.py  config.py  constants.py  core.py  law.py  loaders.py  utils.py
olmix/generate/: __init__.py  synthesize_mixture.py  utils.py
olmix/launch/: __init__.py  beaker.py  cli.py  launch_utils.py  synthesize_mixture.py  train.py  utils.py
olmix/model/: __init__.py  evaluators.py  transformer.py
olmix/plots/: __init__.py  plotting.py
scripts/: migrate_configs.py  nest_mix_weights.py  normalize_mix_weights.py
scripts/plots/fig1/: fig1.py
scripts/plots/fig2/: fig2.py  fig2_beige.py
scripts/plots/fig3/: fig3.py  fig3_beige.py
scripts/plots/overview/: fig1.py
tests/: test_cli.py  test_config.py  test_fit_config.py  test_imports.py  test_transformer.py
tests/test_fit/: test_exact_proposer.py  test_regressors.py
